# thesis

./: tf_file_printer.cpp
aruco_ws/camera_info/: CMakeLists.txt  aruco_camera.yaml  package.xml  params.yaml
aruco_ws/src/bridger/: CMakeLists.txt  package.xml
aruco_ws/src/bridger/launch/: vision.launch.py
aruco_ws/src/bridger/src/: Calibration_OpenCV.yaml  subBridge.cpp
aruco_ws/src/marker_interfaces/: CMakeLists.txt  package.xml
aruco_ws/src/marker_mapper/: CMakeLists.txt  package.xml
aruco_ws/src/pose_writer_aruco/: CMakeLists.txt  package.xml
aruco_ws/src/pose_writer_aruco/src/: tf_file_printer.cpp  tf_file_printerV3.cpp
aruco_ws/src/pose_writer_aruco/srv/: FileDetails.srv
calibrator/: CMakeLists.txt  Calibration  Makefile  camera_calibratie.txt  camera_test_calab.txt
kasper/: HTC_Viverandomalley_0.200000_0.000000_0.000000.csv
kasper/ArUco/SingleMarker/: pickel_1.000000_1.000000_0.150000.csv  pickel_2.000000_2.000000_0.150000.csv  pickel_2.000000_3.000000_0.150000.csv  pickel_2.500000_2.500000_0.150000.csv  pickel_3.000000_2.000000_0.150000.csv  pickel_3.000000_3.000000_0.150000.csv  pickel_4.000000_4.000000_0.150000.csv  statief_1.000000_1.000000_0.985000.csv  statief_2.000000_2.000000_0.985000.csv  statief_2.000000_3.000000_0.985000.csv  statief_2.500000_2.500000_0.985000.csv  statief_3.000000_2.000000_0.985000.csv  statief_3.000000_3.000000_0.985000.csv  statief_4.000000_4.000000_0.985000.csv  vloer_1.000000_1.000000_0.020000.csv  vloer_2.000000_2.000000_0.020000.csv  vloer_2.000000_3.000000_0.020000.csv  vloer_2.500000_2.500000_0.020000.csv  vloer_3.000000_2.000000_0.020000.csv  vloer_3.000000_3.000000_0.020000.csv  vloer_4.000000_4.000000_0.020000.csv
kasper/ArUco/clustering/: statief_1.000000_1.000000_1.000000.csv  statief_2.000000_2.000000_1.000000.csv  statief_2.000000_3.000000_1.000000.csv  statief_2.500000_2.500000_1.000000.csv  statief_3.000000_2.000000_1.000000.csv  statief_3.000000_3.000000_1.000000.csv  statief_4.000000_4.000000_1.000000.csv  statief_direct_1.000000_1.000000_1.000000.csv  statief_direct_2.000000_2.000000_1.000000.csv  statief_direct_2.000000_3.000000_1.000000.csv  statief_direct_2.500000_2.500000_1.000000.csv  statief_direct_3.000000_2.000000_1.000000.csv  statief_direct_3.000000_3.000000_1.000000.csv  statief_direct_4.000000_4.000000_1.000000.csv
kasper/ArUco/dynamic/: frommarker5_1.000000_0.000000_0.000000.csv  tomarker5_5.000000_0.000000_0.000000.csv
kasper/ArUco/licht/: belicht_marker5_1.000000_0.000000_0.000000.csv  belicht_marker5_3.000000_0.000000_0.000000.csv  belicht_marker5_5.000000_0.000000_0.000000.csv  onbelicht_marker5_1.000000_0.000000_0.000000.csv  onbelicht_marker5_3.000000_0.000000_0.000000.csv  onbelicht_marker5_5.000000_0.000000_0.000000.csv
kasper/ArUco/multiple_markers/: statief_1.000000_1.000000_1.000000.csv  statief_2.000000_2.000000_1.000000.csv  statief_2.000000_3.000000_1.000000.csv  statief_2.500000_2.500000_1.000000.csv  statief_3.000000_2.000000_1.000000.csv  statief_3.000000_3.000000_1.000000.csv  statief_4.000000_4.000000_1.000000.csv
kasper/ArUco/parallel/: _1.000000_0.000000_0.000000.csv  marker5_1.000000_0.000000_0.000000.csv  marker5_2.000000_0.000000_0.000000.csv  marker5_3.000000_0.000000_0.000000.csv  marker5_4.000000_0.000000_0.000000.csv  marker5_5.000000_0.000000_0.000000.csv  marker5_filtered_5.000000_0.000000_0.000000.csv  marker5_withfilter_1.000000_0.000000_0.000000.csv  marker5_withfilter_2.000000_0.000000_0.000000.csv  marker5_withfilter_3.000000_0.000000_0.000000.csv  marker5_withfilter_4.000000_0.000000_0.000000.csv  marker5_withfilter_5.000000_0.000000_0.000000.csv  static_wtih_cam_and_tracker_0.000000_1.000000_0.000000.csv  static_wtih_cam_and_tracker_0.000000_2.000000_0.000000.csv  static_wtih_cam_and_tracker_0.000000_3.000000_0.000000.csv  static_wtih_cam_and_tracker_0.000000_4.000000_0.000000.csv  static_wtih_cam_and_tracker_0.000000_5.000000_0.000000.csv
kasper/ArUco/random/: _0.000000_0.000000_0.000000.csv
kasper/ArUco/randomtest/: appel_1.000000_1.000000_1.000000.csv
kasper/ArUco/rijden/: marker5_endtobegin_0.000000_0.000000_0.000000.csv
kasper/HTC_Vive/: oneBasestation_45°_1.000000_1.000000_0.000000.csv  statief_2.500000_2.500000_1.000000.csv
kasper/HTC_Vive/'doublebasestation_parallel/: one_before_2.500000_2.500000_0.000000.csv  two_after_2.500000_2.500000_0.000000.csv  two_after_plus_2.500000_2.500000_0.000000.csv
kasper/HTC_Vive/clustering/: doubleBasestation_centred_focus°_1.000000_1.000000_0.000000.csv  doubleBasestation_centred_focus°_2.000000_2.000000_0.000000.csv  doubleBasestation_centred_focus°_2.000000_3.000000_0.000000.csv  doubleBasestation_centred_focus°_2.500000_2.500000_0.000000.csv  doubleBasestation_centred_focus°_3.000000_2.000000_0.000000.csv  doubleBasestation_centred_focus°_3.000000_3.000000_0.000000.csv  doubleBasestation_centred_focus°_4.000000_4.000000_0.000000.csv  doubleBasestation_over_45°_1.000000_1.000000_0.000000.csv  doubleBasestation_over_45°_2.000000_2.000000_0.000000.csv  doubleBasestation_over_45°_2.000000_3.000000_0.000000.csv  doubleBasestation_over_45°_2.500000_2.500000_0.000000.csv  doubleBasestation_over_45°_3.000000_2.000000_0.000000.csv  doubleBasestation_over_45°_3.000000_3.000000_0.000000.csv  doubleBasestation_over_45°_4.000000_4.000000_0.000000.csv  doubleBasestation_over°_1.000000_1.000000_0.000000.csv  doubleBasestation_over°_2.000000_2.000000_0.000000.csv  doubleBasestation_over°_2.000000_3.000000_0.000000.csv  doubleBasestation_over°_2.500000_2.500000_0.000000.csv  doubleBasestation_over°_3.000000_2.000000_0.000000.csv  (+23 more)
vive_ws/src/vive_launchers/: CMakeLists.txt  package.xml
vive_ws/src/vive_launchers/launch/: server_vr.launch.py  vive.launch.py
vive_ws/src/vive_launchers/scripts/: close_servervr.sh  find_steam_runtime.sh  launch_servervr.sh
vive_ws/src/vive_tracker/: CMakeLists.txt  package.xml
vive_ws/src/vive_tracker/include/: vr_interface.h
vive_ws/src/vive_tracker/src/: vive_node.cpp  vr_interface.cpp
vive_ws/src/vive_tracker/srv/: Calibrate.srv
(+102 files in other folders)
